<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/lifecycle_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lifecycle_text" />

    <Button
        android:id="@+id/go_to_next_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_next_activity_text" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_text" />


</LinearLayout>