<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="basic.app.id.learningbasicandroid.MainActivity">

    <Button
        android:id="@+id/go_to_life_cycle_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_life_cycle_activity_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/go_to_intent_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_intent_activity_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_life_cycle_activity_button" />

    <Button
        android:id="@+id/go_to_fragment_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_fragment_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_intent_activity" />

</android.support.constraint.ConstraintLayout>
